--- a/Giffy/Giffy/Views/GifTypes/SyntheticGIFPage.xaml
+++ b/Giffy/Giffy/Views/GifTypes/SyntheticGIFPage.xaml
@@ -6,7 +6,27 @@
              prism:ViewModelLocator.AutowireViewModel="True"
              xmlns:controls="clr-namespace:Giffy.Controls;assembly=Giffy"
              xmlns:iconize="clr-namespace:FormsPlugin.Iconize;assembly=FormsPlugin.Iconize"
+             xmlns:videoPlayer="clr-namespace:Xam.Plugins.VideoPlayer;assembly=Xam.Plugins.VideoPlayer"
+             xmlns:templates="clr-namespace:Giffy.Views.Templates;assembly=Giffy"
              x:Class="Giffy.Views.SyntheticGIFPage"
              Title="{utilities:StringResource Synthetic}">
-  <Label Text="{Binding Message}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout>
+    <ListView x:Name="PostListView"
+                CachingStrategy="RecycleElement"
+                BackgroundColor="#ECEFF4"
+                ItemsSource="{Binding Gifs}"
+                HasUnevenRows="true"
+                IsPullToRefreshEnabled="true"
+                RefreshCommand="{Binding RefreshCommand}"
+                IsRefreshing="{Binding IsBusy}"
+                Margin="5,0,5,0"
+                HorizontalOptions="FillAndExpand"
+                VerticalOptions="FillAndExpand">
+      <ListView.ItemTemplate>
+        <DataTemplate>
+          <templates:GifViewCell />
+        </DataTemplate>
+      </ListView.ItemTemplate>
+    </ListView>
+  </StackLayout>
 </ContentPage>
