--- a/Giffy/Giffy/Views/Templates/GifViewCell.xaml
+++ b/Giffy/Giffy/Views/Templates/GifViewCell.xaml
@@ -1,12 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ViewCell xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:videoPlayer="clr-namespace:Xam.Plugins.VideoPlayer;assembly=Xam.Plugins.VideoPlayer"
-             xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
-             x:Class="Giffy.Views.Templates.GifViewCell">
-  <Grid x:Name="GifPanel" BackgroundColor="Aqua">
-    <forms:CachedImage Grid.Row="0" x:Name="Thumbnail" Source="{Binding Thumbnail}" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
-    <ActivityIndicator Grid.Row="0" x:Name="ActivityIndicator" IsRunning="True" HeightRequest="30" WidthRequest="30" VerticalOptions="Center" HorizontalOptions="Center"/>
-    <videoPlayer:VideoPlayer Grid.Row="0" x:Name="Video" VideoSource="{Binding Url}" AutoPlay="True" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+          xmlns:videoPlayer="clr-namespace:Xam.Plugins.VideoPlayer;assembly=Xam.Plugins.VideoPlayer"
+          xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
+          xmlns:transformations="clr-namespace:FFImageLoading.Transformations;assembly=FFImageLoading.Transformations"
+          x:Class="Giffy.Views.Templates.GifViewCell">
+  <Grid x:Name="GifPanel" RowSpacing="0,0,0,5" BackgroundColor="White" Margin="0,0,0,10" Padding="5">
+    <Grid.RowDefinitions>
+      <RowDefinition Height="20" />
+      <RowDefinition Height="20" />
+      <RowDefinition Height="Auto" />
+      <RowDefinition Height="Auto" />
+      <RowDefinition Height="Auto" />
+    </Grid.RowDefinitions>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="40" />
+      <ColumnDefinition Width="*" />
+      <ColumnDefinition Width="*" />
+    </Grid.ColumnDefinitions>
+
+    <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Margin="0,0,0,0">
+      <forms:CachedImage Source="avatar_background"
+                         Aspect="AspectFill" />
+      <forms:CachedImage x:Name="Avatar" Source="{Binding CreatedUserAvatar}"
+                         Aspect="AspectFill" />
+    </Grid>
+
+    <Label Text="{Binding CreatedUserDisplayName}" FontSize="12" FontAttributes="Bold" TextColor="#45686E" Grid.Row="0"
+           Margin="5,0,0,0"
+           Grid.Column="1" Grid.ColumnSpan="4" VerticalOptions="Center" />
+
+    <Label Text="{Binding PublishedDate}" FontSize="12" TextColor="#45686E" Grid.Row="1"
+           Margin="5,0,0,0"
+           Grid.Column="1" Grid.ColumnSpan="4" VerticalOptions="Center" />
+
+    <Label Text="{Binding Title}" FontSize="22" TextColor="#45686E" Grid.Row="2" Grid.Column="0" Margin="0,0,0,0"
+               Grid.ColumnSpan="5"
+               VerticalOptions="Center" />
+
+    <Label Text="{Binding Description}" FontSize="14" TextColor="#45686E" Grid.Row="3" Grid.Column="0" Margin="0,0,0,0"
+           Grid.ColumnSpan="5"
+           VerticalOptions="Center" />
+
+    <Grid Grid.Row="4" Grid.ColumnSpan="5" Grid.Column="0" Margin="0,0,0,0" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
+      <forms:CachedImage Grid.Row="0" x:Name="Thumbnail" Source="{Binding Url}" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+      <ActivityIndicator Grid.Row="0" x:Name="ActivityIndicator" IsRunning="True" HeightRequest="30" WidthRequest="30" VerticalOptions="Center" HorizontalOptions="Center"/>
+      <videoPlayer:VideoPlayer Grid.Row="0" x:Name="Video" VideoSource="{Binding Url}" AutoPlay="True" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+    </Grid>
   </Grid>
 </ViewCell>
