--- a/Giffy/Giffy/Views/Templates/GifViewCell.xaml
+++ b/Giffy/Giffy/Views/Templates/GifViewCell.xaml
@@ -14,16 +14,18 @@
       <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
     <Grid.ColumnDefinitions>
-      <ColumnDefinition Width="40" />
+      <ColumnDefinition Width="45" />
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="*" />
     </Grid.ColumnDefinitions>
 
     <Grid Grid.Row="0" Grid.Column="0" Grid.RowSpan="2" Margin="0,0,0,0">
-      <forms:CachedImage Source="avatar_background"
-                         Aspect="AspectFill" />
-      <forms:CachedImage x:Name="Avatar" Source="{Binding CreatedUserAvatar}"
-                         Aspect="AspectFill" />
+      <forms:CachedImage x:Name="Avatar" Source="{Binding CreatedUserAvatar}" 
+                         Aspect="Fill">
+        <forms:CachedImage.Transformations>
+          <transformations:CircleTransformation />
+        </forms:CachedImage.Transformations>  
+      </forms:CachedImage>
     </Grid>
 
     <Label Text="{Binding CreatedUserDisplayName}" FontSize="12" FontAttributes="Bold" TextColor="#45686E" Grid.Row="0"
